# posit-c

./: .gitignore  CMakeLists.txt  README.md  test.sh
.circleci/: config.yml
src/: CMakeLists.txt  Posit.cpp  Posit.h  main.cpp
tests/: CMakeLists.txt  PositAddTest.cpp  PositAddTest.h  PositCreateDoubleTest.cpp  PositCreateDoubleTest.h  PositCreateFloatTest.cpp  PositCreateFloatTest.h  PositCreateTest.cpp  PositCreateTest.h  PositSubtractTest.cpp  Testable.h  Utils.cpp  Utils.h  example_add.cpp  extractFields.cpp  posit_add.cpp  posit_create.cpp  posit_create_double.cpp  posit_create_float.cpp  tests.cpp
